footer: (fixed content wrap)

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -64,9 +64,20 @@
 
     .cards-buy  {
         flex-wrap: nowrap;
+	 }
+}
+
+@media only screen and (max-width: 1199px) {
+    #track .track-info {
+        position: absolute;
+        top: -30px;
+        left: 0;
+        z-index: 1;
+        width: 45%;
+        height: auto;
     }
-    
-    .footer {
+
+        .footer {
         padding: 70px 30px 20px;
         font-size: 1em;
     }
@@ -100,23 +111,26 @@
     .footer .copyright {
         text-align: left;
         font-size: .875em;
-	 }
-}
-
-@media only screen and (max-width: 1199px) {
-    #track .track-info {
-        position: absolute;
-        top: -30px;
-        left: 0;
-        z-index: 1;
-        width: 45%;
-        height: auto;
-    }
+  }
 }
 
 @media only screen and (max-width: 1024px) {
     #hero {
+        display:flex;
+        color: #fff;
+        text-align: right;
+        font-family: Poppins, sans-serif;
+        padding: 0;
+        padding-top: 0;
         height: 55vh;
+        min-height: 100%;
+        width: 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
     }
 
     #hero .content {
@@ -248,6 +262,42 @@
     #track .track-info {
         max-width: 50%;
         top: -50px;
+    }
+
+    .footer {
+        padding: 70px 30px 20px;
+        font-size: 1em;
+    }
+
+    .footer .flex-wrap {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+
+    .footer-logo {
+        margin-bottom: 30px;
+    }
+
+    .footer-contacts {
+        margin-left: 0;
+    }
+
+    .footer-contacts .col {
+        -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    }
+
+    .footer .address {
+        margin-bottom: 20px;
+    }
+
+    .footer .copyright {
+        text-align: left;
+        font-size: .875em;
   }
 }
 
